--- a/vignettes/irace-package.Rnw
+++ b/vignettes/irace-package.Rnw
@@ -2663,3 +2663,7 @@ file for errors and the \code{.stdout} file to see the output your algorithm pro
 \end{appendices}
 
 \end{document}
+
+%%% Local Variables:
+%%% TeX-master: t
+%%% End:
